[metadata]
name = pyimagefilter
version = 0.7.0
author = Michael Hirsch, Ph.D.
url = https://github.com/scivision/python-image-processing
description = Demo of Python image processing
keywords =
  hyperspectra
  image filtering
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: Implementation :: CPython
  Topic :: System :: Networking
  Topic :: Utilities
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  numpy
  matplotlib
  scipy
  scikit-image
  imageio
  spectral

[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
